# hijklmnop

./: README.md  docker-compose-dev.yaml  docker-compose.yaml  ready-todo.txt  run-wobot-todo.sh
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/dependencies/: auth.py  database.py
api/app/models/: todo_models.py  user_models.py
api/app/routers/: __init__.py  auth.py  todo.py
api/app/schemas/: __init__.py  todo.py  user.py
api/app/schemas/migrations/: env.py
api/app/schemas/migrations/versions/: 0c0a3b2aaeae_update_user_foreign_key_in_todo.py  499bad21d5a4_update_user_tables_relationship.py  55d78484cde9_added_created_at_and_updated_at_fields.py  88f0efe032a9_added_user_foreign_key_in_todo.py  9565d119b438_update_user_table_with_a_relationship.py  9986227ccef2_added_user_model.py  af6ad4eb0419_initial_migration.py
